--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  pedantic: ^1.8.0
+  pedantic: ^1.8.0+1
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
