--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -20,6 +20,11 @@ jobs:
       uses: steebchen/flutter@v1.0.0
       with:
         args: pub get
+    
+    - name: run tests
+      uses: steebchen/flutter@v1.0.0
+      with:
+        args: test
 
     - name: build apk
       uses: steebchen/flutter@v1.0.0
