--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,6 +18,8 @@ jobs:
 
     - name: Flutter action
       uses: subosito/flutter-action@v1.3.0
+      with: 
+        flutter-version: v1.12.13+hotfix.9
     - run: flutter pub get
     - run: flutter analyze
     - run: flutter test
