--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Flutter action
       uses: subosito/flutter-action@v1.3.0
       with: 
-        flutter-version: v1.12.13+hotfix.9
+        flutter-version: 'v1.12.13+hotfix.9'
     - run: flutter pub get
     - run: flutter analyze
     - run: flutter test
