--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,15 +8,13 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    container:
-      image:  google/dart:latest 
+    runs-on: ubuntu-18.04   
     
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
-        java-version: '8.x'
+        java-version: 1.8
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable'
