--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   pedantic: ^1.8.0+1
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
-  hive_generator: ^0.7.0+2
+  #hive: ^1.4.1+1
+  #hive_flutter: ^0.3.0+2
+  #hive_generator: ^0.7.0+2
 
   cupertino_icons: ^0.1.3
 
