--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,14 @@ description: A Todo App Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  pedantic: ^1.8.0+1
-  #hive: ^1.4.1+1
-  #hive_flutter: ^0.3.0+2
-  #hive_generator: ^0.7.0+2
+  pedantic: ^1.9.2
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
